[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/dreamland-3/Dreamland.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/mainmenubg.png" type="Texture" id=2]
[ext_resource path="res://main_screen.gd" type="Script" id=3]
[ext_resource path="res://main_board.tscn" type="PackedScene" id=4]
[ext_resource path="res://pnp.tscn" type="PackedScene" id=5]
[ext_resource path="res://computer.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.776471, 0.72549, 0.72549, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.709804, 0.458824, 0.458824, 1 )

[sub_resource type="StyleBoxFlat" id=5]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )
OnlinemainGameScene = ExtResource( 4 )
PassGameScene = ExtResource( 5 )
CompGameScene = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1200.0
margin_bottom = 1200.0
rect_scale = Vector2( 0.412839, 0.497109 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 496.0
margin_bottom = 597.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 496.0
margin_bottom = 597.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 496.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Tic Tac Toe"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 281.0
margin_right = 496.0
margin_bottom = 597.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 496.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 140
custom_constants/margin_top = 0
custom_constants/margin_left = 140
custom_constants/margin_bottom = 0

[node name="Multiplayer" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 140.0
margin_right = 356.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Online Multiplayer"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 496.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 140
custom_constants/margin_top = 10
custom_constants/margin_left = 140
custom_constants/margin_bottom = 0

[node name="Pass" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 140.0
margin_top = 10.0
margin_right = 356.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Pass N Play"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 496.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 140
custom_constants/margin_top = 10
custom_constants/margin_left = 140
custom_constants/margin_bottom = 0

[node name="Computer" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 140.0
margin_top = 10.0
margin_right = 356.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Play vs Computer"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 496.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 140
custom_constants/margin_top = 10
custom_constants/margin_left = 140
custom_constants/margin_bottom = 150

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4"]
margin_left = 140.0
margin_top = 10.0
margin_right = 356.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Multiplayer" to="." method="_on_Multiplayer_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Pass" to="." method="_on_Pass_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Computer" to="." method="_on_Computer_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4/quit" to="." method="_on_quit_button_up"]
